--- a/Pass_gen/templates/Pass_gen/password.html
+++ b/Pass_gen/templates/Pass_gen/password.html
@@ -1,9 +1,38 @@
-{% block content %}
-  <form method='post'>
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_div }}
+            <button type="submit" class="btn btn-primary">Generate Password</button>
+        </form>
+        <p>Your password is: {{ password }}</p>
+    </div>
+</body>
+<!-- <form method='post'>
+    {% csrf_token %}
+    <div class="form-group">
+        {{ form.password_length.label_tag }}
+        {{ form.password_length }}
+    </div>
+    <button type="submit" class="btn btn-primary">Generate Password</button>
+    <p>Your password is : {{password}} </p>
+</form> -->
+
+  <!-- <form method='post'>
     {% csrf_token %}
     {{ form.as_div }}
     <button name="submit">Generate Password</button>
   </form>
 
-  <p>Your password is : {{password}} </p>
-{% endblock content %}
+  <p>Your password is : {{password}} </p> -->
